language/move-compiler/tests/move_check/parser/spec_parsing_struct_type_bad_model.move
module 0x8675309::M {
    spec module {
        struct BadModel :: ;
    }
}
